--- a/frontend/base.html
+++ b/frontend/base.html
@@ -49,6 +49,13 @@
     </div>
 
     <div>
+      <h3>Pay Someone</h3>
+      <input type="text" id="someone" />
+      <input type="text" id="payAmount" />
+      <button onclick="pay()">Pay</button>
+    </div>
+
+    <div>
       <h3>View Account Owners</h3>
       <input type="text" id="viewOwnersAccount" />
       <p id="listOwners"></p>
